improvements of the repo.

--- a/Python/vb_day_1_lab.ipynb
+++ b/Python/vb_day_1_lab.ipynb
@@ -151,9 +151,6 @@
     "    # Raise error if the image isn't found\n",
     "    raise FileNotFoundError(f'Image not found at {img_path_in}')\n",
     "\n",
-    "# Convert the image from BGR to RGB color format\n",
-    "img_rgb = cv2.cvtColor(img_raw, cv2.COLOR_BGR2RGB)\n",
-    "\n",
     "# Copy the original image to draw contours and bounding boxes on it\n",
     "img_registred_1 = img_rgb.copy()\n",
     "\n",
@@ -170,7 +167,7 @@
     "\n",
     "# Adjust layout and display all images side by side\n",
     "plt.tight_layout()\n",
-    "plt.show()"
+    "plt.show()\n"
    ]
   },
   {
