--- a/Python/vb_day_2_lab.ipynb
+++ b/Python/vb_day_2_lab.ipynb
@@ -162,7 +162,7 @@
     "    class_id = results[0].boxes.cls.cpu().numpy(); b_box = results[0].boxes.xywhn.cpu().numpy()\n",
     "    conf = results[0].boxes.conf.cpu().numpy()\n",
     "\n",
-    "    for class_id_i, b_box_i in zip(class_id, b_box):\n",
+    "    for _, (class_id_i, b_box_i, conf_i) in enumerate(zip(class_id, b_box, conf)):\n",
     "        x_center, y_center, width, height = b_box_i\n",
     "\n",
     "        # Convert YOLO coordinates to pixel coordinates\n",
@@ -180,7 +180,7 @@
     "        cv2.rectangle(img_raw, (x_top_left, y_top_left), (x_bottom_right, y_bottom_right), class_id_color, 2)\n",
     "\n",
     "        # Put class ID and confidence score\n",
-    "        label = f'Class {int(class_id_i)}: {conf[_]:.2f}'\n",
+    "        label = f'Class {int(class_id_i)}: {conf_i:.2f}'\n",
     "        cv2.putText(img_raw, label, (x_top_left, y_top_left - 10), cv2.FONT_HERSHEY_SIMPLEX, 0.5, class_id_color, 2)\n",
     "\n",
     "# Define output image path\n",
@@ -303,7 +303,7 @@
     "    class_id = results[0].boxes.cls.cpu().numpy(); b_box = results[0].boxes.xywhn.cpu().numpy()\n",
     "    conf = results[0].boxes.conf.cpu().numpy()\n",
     "\n",
-    "    for class_id_i, b_box_i in zip(class_id, b_box):\n",
+    "    for _, (class_id_i, b_box_i, conf_i) in enumerate(zip(class_id, b_box, conf)):\n",
     "        x_center, y_center, width, height = b_box_i\n",
     "\n",
     "        # Convert YOLO coordinates to pixel coordinates\n",
@@ -321,7 +321,7 @@
     "        cv2.rectangle(img_raw, (x_top_left, y_top_left), (x_bottom_right, y_bottom_right), class_id_color, 2)\n",
     "\n",
     "        # Put class ID and confidence score\n",
-    "        label = f'Class {int(class_id_i)}: {conf[_]:.2f}'\n",
+    "        label = f'Class {int(class_id_i)}: {conf_i:.2f}'\n",
     "        cv2.putText(img_raw, label, (x_top_left, y_top_left - 10), cv2.FONT_HERSHEY_SIMPLEX, 0.5, class_id_color, 2)\n",
     "\n",
     "# Define output image path\n",
