--- a/Python/vb_day_2_lab.ipynb
+++ b/Python/vb_day_2_lab.ipynb
@@ -124,7 +124,7 @@
    "outputs": [],
    "source": [
     "# Locate the path to the project folder\n",
-    "project_folder = os.getcwd().split('Vision-Bootcamp')[0] + 'Vision-Bootcamp'\n",
+    "project_folder = os.getcwd().split('INTEMAC_Vision_Bootcamp')[0] + 'INTEMAC_Vision_Bootcamp'\n",
     "\n",
     "# Define file path for the image location\n",
     "file_path = '../Data/Stand_1/Dataset_v1/images/test/'\n",
@@ -265,7 +265,7 @@
    "outputs": [],
    "source": [
     "# Locate the path to the project folder\n",
-    "project_folder = os.getcwd().split('Vision-Bootcamp')[0] + 'Vision-Bootcamp'\n",
+    "project_folder = os.getcwd().split('INTEMAC_Vision_Bootcamp')[0] + 'INTEMAC_Vision_Bootcamp'\n",
     "\n",
     "# Define file path for the image location\n",
     "file_path = '../Data/Stand_2/Dataset_v1/images/test/'\n",
