--- a/Python/vb_day_2_intro.ipynb
+++ b/Python/vb_day_2_intro.ipynb
@@ -131,7 +131,7 @@
    "outputs": [],
    "source": [
     "# Locate the path to the project folder\n",
-    "project_folder = os.getcwd().split('Vision-Bootcamp')[0] + 'Vision-Bootcamp'\n",
+    "project_folder = os.getcwd().split('INTEMAC_Vision_Bootcamp')[0] + 'INTEMAC_Vision_Bootcamp'\n",
     "\n",
     "# Define file path for the dataset location\n",
     "file_path = f'../Data/{CONST_CAMERA_STAND_NAME}/{CONST_DATASET_NAME}/'\n",
@@ -345,7 +345,7 @@
    "source": [
     "\n",
     "# Locate the path to the project folder\n",
-    "project_folder = os.getcwd().split('Vision-Bootcamp')[0] + 'Vision-Bootcamp'\n",
+    "project_folder = os.getcwd().split('INTEMAC_Vision_Bootcamp')[0] + 'INTEMAC_Vision_Bootcamp'\n",
     "\n",
     "# Remove the YOLO model, if it already exists\n",
     "if os.path.isfile(f'../YOLO/Model/{CONST_CAMERA_STAND_NAME}_{CONST_DATASET_NAME}/{CONST_YOLO_SIZE}.pt'):\n",
