improvements of the *.ipynb

--- a/Python/vb_day_2_intro.ipynb
+++ b/Python/vb_day_2_intro.ipynb
@@ -82,7 +82,7 @@
     "# Name of the camera stand\n",
     "CONST_CAMERA_STAND_NAME = 'Stand_1'\n",
     "# Name of the dataset\n",
-    "CONST_DATASET_NAME = 'Dataset_v1'\n",
+    "CONST_DATASET_NAME = 'Dataset_v2'\n",
     "\n",
     "# Get the full path to the dataset\n",
     "full_path = Utilities.General.Get_Full_Path(CONST_CAMERA_STAND_NAME, CONST_DATASET_NAME)\n",
@@ -237,6 +237,12 @@
     "        rotate=(-10, 10),\n",
     "        p=0.75\n",
     "    ),\n",
+    "    A.ColorJitter(\n",
+    "        brightness=(0.25, 1.5),\n",
+    "        contrast=(0.25, 1.5),\n",
+    "        saturation=(0.1, 1.0),\n",
+    "        p=0.5\n",
+    "    ),\n",
     "    A.GaussianBlur(blur_limit=(5, 5), sigma_limit=(0.01, 1.0), p=0.5),\n",
     "    A.RandomResizedCrop(height=1544, width=2064, scale=(0.95, 1.0), p=0.5)\n",
     "], bbox_params=A.BboxParams(format='yolo', label_fields=['class_labels']))\n",
@@ -345,7 +351,7 @@
    "source": [
     "\n",
     "# Locate the path to the project folder\n",
-    "project_folder = os.getcwd().split('Vision-Bootcamp')[0] + 'Vision-Bootcamp'\n",
+    "project_folder = os.getcwd().split('INTEMAC_Vision_Bootcamp')[0] + 'INTEMAC_Vision_Bootcamp'\n",
     "\n",
     "# Remove the YOLO model, if it already exists\n",
     "if os.path.isfile(f'../YOLO/Model/{CONST_CAMERA_STAND_NAME}_{CONST_DATASET_NAME}/{CONST_YOLO_SIZE}.pt'):\n",
@@ -360,7 +366,7 @@
     "    model.add_callback('on_train_start', Freeze_Backbone)\n",
     "\n",
     "# Training the model on a custom dataset with additional dependencies (number of epochs, image size, etc.)\n",
-    "model.train(data=f'{project_folder}/YOLO/Configuration/config_tmp.yaml', batch=-1, imgsz=640, epochs=100, patience=0,\n",
+    "model.train(data=f'{project_folder}/YOLO/Configuration/config_tmp.yaml', batch=-1, imgsz=640, epochs=300, patience=0,\n",
     "            rect=True, name=f'{project_folder}/YOLO/Results/{CONST_CAMERA_STAND_NAME}_{CONST_DATASET_NAME}/train_fb_{CONST_FREEZE_BACKBONE}')"
    ]
   },
