improvements of the *.ipynb

--- a/Python/vb_day_2_intro.ipynb
+++ b/Python/vb_day_2_intro.ipynb
@@ -431,7 +431,7 @@
     "\n",
     "# Predict (test) the model on a test dataset.\n",
     "model.predict(source=f'{project_folder}/Data/{CONST_CAMERA_STAND_NAME}/{CONST_DATASET_NAME}/images/test', save=True, save_txt=True, save_conf=True, \n",
-    "              imgsz=[480, 640], conf=0.5, iou=0.7, name=f'{project_folder}/YOLO/Results/{CONST_CAMERA_STAND_NAME}_{CONST_DATASET_NAME}/predict_fb_{CONST_FREEZE_BACKBONE}')"
+    "              imgsz=640, conf=0.5, iou=0.7, name=f'{project_folder}/YOLO/Results/{CONST_CAMERA_STAND_NAME}_{CONST_DATASET_NAME}/predict_fb_{CONST_FREEZE_BACKBONE}')"
    ]
   }
  ],
