--- a/Python/vb_day_2_lab.ipynb
+++ b/Python/vb_day_2_lab.ipynb
@@ -152,7 +152,7 @@
     "model = YOLO(f'{project_folder}/YOLO/Results/Stand_1_Dataset_v1/train_fb_True/weights/best.pt')\n",
     "\n",
     "# Predict (test) the model on a test dataset.\n",
-    "results = model.predict(source=img_path_in, imgsz=[480, 640], conf=0.5, iou=0.7)\n",
+    "results = model.predict(source=img_path_in, imgsz=640, conf=0.5, iou=0.7)\n",
     "\n",
     "# Define a dictionary for class_id to color mapping\n",
     "class_colors = {0: (0, 255, 255), 1: (255, 0, 0)}  # Yellow and Blue in BGR\n",
@@ -293,7 +293,7 @@
     "model = YOLO(f'{project_folder}/YOLO/Results/Stand_2_Dataset_v1/train_fb_True/weights/best.pt')\n",
     "\n",
     "# Predict (test) the model on a test dataset.\n",
-    "results = model.predict(source=img_path_in, imgsz=[480, 640], conf=0.5, iou=0.7)\n",
+    "results = model.predict(source=img_path_in, imgsz=640, conf=0.5, iou=0.7)\n",
     "\n",
     "# Define a dictionary for class_id to color mapping\n",
     "class_colors = {0: (0, 255, 255), 1: (255, 0, 0)}  # Yellow and Blue in BGR\n",
